<resources>
    <string name="app_name">SEP4_Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Airdata Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_compareGraphs">"Graph compare"</string>


<!--    Health inspection = home  (choose, home, frontpage)-->
    <string name="menu_healthInspection">Health inspection</string>
    <string name="menu_selectRoom">Select device Room</string>
    <string name="menu_unregisteredList">Unregistered devices</string>
    <string name="menu_registerRoom">Register new Room</string>
    <string name="menu_registerDevice">Register new device</string>
    <string name="title_activity_login">Login</string>
    <string name="menu_graphOverview">Total overview</string>
    <string name="menu_linechart">Compare data linechart</string>
    <string name="menu_barchart">Compare data barchart</string>
    <string name="menu_createUser">Create new user</string>
    <string name="menu_adminSettings">Admin settings</string>
    <string name="menu_settingsPanel">Settings panel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to_the_airdata_app">Welcome to the Airdata app</string>
    <string name="select_one_of_the_following">Select one of the following</string>
    <string name="settings">Device Settings</string>
    <string name="all_devices">All devices</string>
</resources>