<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_selectRoomFragment">

    <fragment
        android:id="@+id/nav_healthInspection"
        android:name="com.example.sep4_android.ui.healthInspection.HealthInspectionFragment"
        android:label="@string/menu_healthInspection"
        tools:layout="@layout/fragment_health_inspection" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.sep4_android.ui.settings.SettingsFragment"
        android:label="@string/menu_settingsPanel"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_admin"
        android:name="com.example.sep4_android.ui.graph.lineCharts.overview.LinechartOverviewFragment"
        android:label="@string/menu_graphOverview"
        tools:layout="@layout/fragment_linechart_overview" />

    <fragment
        android:id="@+id/co2DeatilFragment"
        android:name="com.example.sep4_android.ui.graph.lineCharts.co2.CO2DetailFragment"
        android:label="fragment_co2Detail"
        tools:layout="@layout/fragment_co2_detail" />

    <fragment
        android:id="@+id/humidityDeatilFragment"
        android:name="com.example.sep4_android.ui.graph.lineCharts.humidity.HumidityDetailFragment"
        android:label="Detail"
        tools:layout="@layout/fragment_humidity_detail" />

    <fragment
        android:id="@+id/temperatureDetailFragment"
        android:name="com.example.sep4_android.ui.graph.lineCharts.temperature.TempDetailFragment"
        android:label="Detail"
        tools:layout="@layout/fragment_temp_detail" />

    <fragment
        android:id="@+id/nav_selectRoomFragment"
        android:name="com.example.sep4_android.ui.selectRoom.SelectRoomFragment"
        android:label="@string/menu_selectRoom"
        tools:layout="@layout/fragment_select_room" />

    <fragment
        android:id="@+id/nav_register_device"
        android:name="com.example.sep4_android.ui.registerDevice.RegisterDeviceFragment"
        android:label="@string/menu_registerDevice"
        tools:layout="@layout/fragment_register_device" />

    <fragment
        android:id="@+id/nav_unregistered_devices"
        android:name="com.example.sep4_android.ui.unregisteredDevices.UnregisteredDevicesFragment"
        android:label="@string/menu_unregisteredList"
        tools:layout="@layout/fragment_unregistered_devices_fragment" />

    <fragment
        android:id="@+id/nav_create_room"
        android:name="com.example.sep4_android.ui.createRoom.CreateRoomFragment"
        android:label="@string/menu_registerRoom"
        tools:layout="@layout/fragment_create_room" />
    <fragment
        android:id="@+id/nav_compareLineChartFragment"
        android:name="com.example.sep4_android.ui.graph.lineCharts.compare.CompareLineChartFragment"
        android:label="@string/menu_linechart"
        tools:layout="@layout/fragment_line_chartcompare" />
    <fragment
        android:id="@+id/nav_adminSettingsFragment"
        android:name="com.example.sep4_android.ui.admin.AdminFragment"
        android:label="@string/menu_adminSettings"
        tools:layout="@layout/fragment_admin" />
    <fragment
        android:id="@+id/nav_createUserFragment"
        android:name="com.example.sep4_android.ui.createUser.CreateUserFragment"
        android:label="@string/menu_createUser"
        tools:layout="@layout/fragment_create_user" />
    <fragment
        android:id="@+id/allDevices"
        android:name="com.example.sep4_android.ui.allDevices.AllDevicesFragment"
        android:label="fragment_all_devices"
        tools:layout="@layout/fragment_all_devices" />
</navigation>